--- a/includes/bank.pug
+++ b/includes/bank.pug
@@ -124,10 +124,10 @@ block content
         ul
           li
             div.icon.alfabank.ua
-            a(href='https://alfabank.ua/', target='_blank') alfabank.ua
+            a(href='https://letyshops.com/r/alfa-bank-ukraina-6ad28531522e', target='_blank') alfabank.ua`
           li
             div.icon.ideabank.ua
-            a(href='https://letyshops.com/r/idea-bank-ua-4qh7st9ddx8go0', target='_blank') ideabank.ua`
+            a(href='https://www.ideabank.ua/', target='_blank') ideabank.ua
           li
             div.icon.hotline.finance
             a(href='https://letyshops.com/r/hotline-4qh7st9ddxk40o', target='_blank') hotline.finance`
