--- a/includes/index.pug
+++ b/includes/index.pug
@@ -298,11 +298,17 @@ block content
             div.icon.stylus.ua
             a(href='https://letyshops.com/r/stylus-4qh7st9dcjok8o', target='_blank') stylus.ua`
           li
-            div.icon.eldorado.ua
-            a(href='https://letyshops.com/r/eldorado-ua-4qh7st9dcj28sk', target='_blank') eldorado.ua`
+            div.icon.skidka.ua
+            a(href='https://letyshops.com/r/skidka-ua-4qh7st93i7408s', target='_blank') skidka.ua`
           li
             div.icon.moyo.ua
             a(href='https://letyshops.com/r/moyo-ua-4qh7st9dcjacc8', target='_blank') moyo.ua`
+          li
+            div.icon.f.ua
+            a(href='https://letyshops.com/r/f-ua-tot-samyi-magazin-4qh7st9dcoowkk', target='_blank') f.ua`
+          li
+            div.icon.allo.ua
+            a(href='https://letyshops.com/r/allo-3f4b6c4857e7', target='_blank') allo.ua`
           li
             div.icon.xiaomi.ua
             a(href='https://letyshops.com/r/xiaomi-ua-4qh7st9dcpa80o', target='_blank') xiaomi.ua`
@@ -314,8 +320,8 @@ block content
             a(href='https://letyshops.com/r/med-magazin-ua-4qh7st9ddu2oog', target='_blank') med-magazin.ua`
             div.icontooinfo.a0repa3(title='Med-Magazin - сеть магазинов медтехники, медоборудования и товаров для здоровья в Украине', alt='')
           li
-            div.icon.apteka911.com.ua
-            a(href='https://apteka911.com.ua', target='_blank') apteka911.com.ua
+            div.icon.apteka24.ua
+            a(href='https://letyshops.com/r/apteka24-71012859b26c', target='_blank') apteka24.ua`
       .group
         .group-title
           a(href='/others.html')
@@ -408,6 +414,10 @@ block content
             span.badge.badge-danger Обновки в закладках: v.2020-05-30
         ul
           li
+            div.icon.repka.ua
+            a(href='https://letyshops.com/r/repka-ua-7352c7232593', target='_blank') repka.ua`
+            div.icontooinfo.a0repa3(title='Repka.UA - Лучший сервис и условия доставки по всей Украине. Ноутбуки Смартфоны Бытовая техника Наручные часы Товары для отдыха', alt='')
+          li
             div.icon.a0pencil-1(title='Текстовая информация', alt='')
             a(href='https://koek.billing.city/login', target='_blank') Кабінет електро 2020
             div.icontooinfo.a0repa3(title='Огляд листівки від КОЕК', alt='')
@@ -452,12 +462,8 @@ block content
             div.icontooinfo.a0repa3(title='Раздел-Магазины. Krauff – немецкая элитная посуда. Самый полный каталог посуды Krauff. Бесплатная доставка. Гарантия качества.', alt='')
           li
             div.icon.prego.ua
-            a(href='https://letyshops.com/r/prego-ua-4qh7st9ddpgkg4', target='_blank') prego.ua`
+            a(href='https://letyshops.com/r/prego-ua-7abce57c019e', target='_blank') prego.ua`
             div.icontooinfo.a0repa3(title='Раздел-Магазины. Интернет магазин обуви в Киеве ✿ Обувь PREGO ✿ Широкий ассортимент модной и брендовой обуви и сумок по доступным ценам ➦ Доставка по Украине', alt='')
-          li
-            div.icon.ager.ua
-            a(href='https://letyshops.com/r/ager-ua-4qh7st9ddpq8ss', target='_blank') ager.ua`
-            div.icontooinfo.a0repa3(title='Раздел-Магазины. Интернет-магазин Ager - мужская и женская одежда оптом и в розницу. Низкие цены. Дропшиппинг. Совместные покупки. Акции и скидки каждый день.', alt='')
           li
             div.icon.sneakerstudio.com.ua
             a(href='https://letyshops.com/r/sneakerstudio-ua-4qh7st9ddq0ww8', target='_blank') sneakerstudio.com.ua`
