--- a/includes/shops.pug
+++ b/includes/shops.pug
@@ -83,10 +83,10 @@ block content
             a(href='https://rozetka.com.ua/', target='_blank') rozetka.com.ua
           li
             div.icon.allo.ua
-            a(href='https://allo.ua', target='_blank') allo.ua
+            a(href='https://letyshops.com/r/allo-3f4b6c4857e7', target='_blank') allo.ua`
           li
             div.icon.eldorado.ua
-            a(href='https://letyshops.com/r/eldorado-ua-4qh7st9dcj28sk', target='_blank') eldorado.ua`
+            a(href='https://eldorado.ua/uk/', target='_blank') eldorado.ua
           li
             div.icon.moyo.ua
             a(href='https://letyshops.com/r/moyo-ua-4qh7st9dcjacc8', target='_blank') moyo.ua`
@@ -116,6 +116,10 @@ block content
           li
             div.icon.xiaomi.ua
             a(href='https://letyshops.com/r/xiaomi-ua-4qh7st9dcpa80o', target='_blank') xiaomi.ua`
+          li
+            div.icon.repka.ua
+            a(href='https://letyshops.com/r/repka-ua-7352c7232593', target='_blank') repka.ua`
+            div.icontooinfo.a0repa3(title='Repka.UA - Лучший сервис и условия доставки по всей Украине. Ноутбуки Смартфоны Бытовая техника Наручные часы Товары для отдыха', alt='')
           li
             div.icon.telemart.ua
             a(href='https://letyshops.com/r/telemart-ua-4qh7st9dcpickc', target='_blank') telemart.ua`
@@ -156,7 +160,7 @@ block content
         ul
           li
             div.icon.master-plus.com.ua
-            a(href='https://letyshops.com/r/master-plius-ua-4qh7st9dcrgggk', target='_blank') master-plus.com.ua`
+            a(href='https://master-plus.com.ua/ua/', target='_blank') master-plus.com.ua
             div.icontooinfo.a0repa3(title='ТМ Мастер-Плюс - Интернет магазин запчастей для стиральных машин, холодильников и другой бытовой техники.', alt='')
       .group
         .group-title
@@ -225,7 +229,7 @@ block content
             div.icontooinfo.a0repa3(title='Официальный интернет-магазин брендовой одежды Cardo. ★ Фирменная одежда от бренда Cardo. ✈ Доставка по всей Украине.', alt='')
           li
             div.icon.prego.ua
-            a(href='https://prego.ua', target='_blank') prego.ua
+            a(href='https://letyshops.com/r/prego-ua-7abce57c019e', target='_blank') prego.ua`
             div.icontooinfo.a0repa3(title='Интернет магазин обуви в Киеве ✿ Обувь PREGO ✿ Широкий ассортимент модной и брендовой обуви и сумок по доступным ценам ➦ Доставка по Украине', alt='')
           li
             div.icon.ager.ua
@@ -327,7 +331,7 @@ block content
             a(href='https://apteka911.com.ua', target='_blank') apteka911.com.ua
           li
             div.icon.apteka24.ua
-            a(href='https://www.apteka24.ua/', target='_blank') apteka24.ua
+            a(href='https://letyshops.com/r/apteka24-71012859b26c', target='_blank') apteka24.ua`
           li
             div.icon.doc.ua
             a(href='https://letyshops.com/r/doc-ua-4qh7st9ddu04wo', target='_blank') doc.ua`
@@ -362,7 +366,7 @@ block content
             a(href='https://www.yakaboo.ua/', target='_blank') yakaboo.ua
           li
             div.icon.grenka.ua
-            a(href='https://letyshops.com/r/grenka-ua-4qh7st9ddvacsw', target='_blank') grenka.ua`
+            a(href='https://grenka.ua/', target='_blank') grenka.ua
           li
             div.icon.bambook.com
             a(href='https://letyshops.com/r/bambook-ua-4qh7st9ddvk04k', target='_blank') bambook.com`
@@ -393,7 +397,7 @@ block content
             a(href='https://letyshops.com/r/rentalcars-4qh7st9ddwcgw8', target='_blank') rentalcars.com`
           li
             div.icon.ihg.com
-            a(href='https://letyshops.com/r/ihg-amea-4qh7st9depesk0', target='_blank') ihg.com`
+            a(href='https://www.ihg.com/hotels/ru/ru/reservation', target='_blank') ihg.com
             div.icontooinfo.a0repa3(title='Найдите и забронируйте номер в любом отеле сети брэндов IHG: InterContinental, Crowne Plaza, Hotel Indigo, Holiday Inn, Holiday Inn Express, Staybridge Suites и Candlewood Suites.', alt='')
       .group
         .group-title
