--- a/includes/index.pug
+++ b/includes/index.pug
@@ -411,8 +411,12 @@ block content
       .group
         .group-title
           a(href='http://zakladki.at.ua/', target='_blank')
-            span.badge.badge-danger Обновки в закладках: v.2020-05-30
+            span.badge.badge-danger Обновки в закладках: v.2020-08-07
         ul
+          li
+            div.icon.a0pencil-1(title='Текстовая информация', alt='')
+            a(href='https://reachinitiative.maps.arcgis.com/apps/webappviewer/index.html?id=b8ea3d22c51246528abb47ef94f20edb', target='_blank') Карта-колір COVID UA
+            div.icontooinfo.a0repa3(title='Візуалізація епідемічних показників на рівні районів та міст обласного значення', alt='')
           li
             div.icon.repka.ua
             a(href='https://letyshops.com/r/repka-ua-7352c7232593', target='_blank') repka.ua`
