--- a/includes/communal.pug
+++ b/includes/communal.pug
@@ -34,11 +34,11 @@ block content
           li
             div.icon.naftogazpostach.com
             a(href='https://gas.ua/', target='_blank') naftogaz
-            span.opisi Кабин.Газ.2019
+            span.opisi Каб.Газ.(!!!)
           li
             div.icon.gasolina-online.com
             a(href='https://gasolina-online.com/', target='_blank') gasolina
-            span.opisi Кабинет.Газ.(старый)
+            span.opisi Каб.Газ.(доставка)
           li
             div.icon.a104.ua
             a(href='https://104.ua/ua/', target='_blank') 104.ua
@@ -113,7 +113,6 @@ block content
             a(href='http://www.my.ukrtelecom.ua/', target='_blank') my.ukrtelecom
             span.opisi КАБИНЕТ
           li
-            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
             div.icon.my.vega.ua
             a(href='https://my.vega.ua/', target='_blank') Vega Telecom
             div.icontooinfo.a0repa3(title='Раздел-Комуналка. Vega Telecom - Національний телеком-оператор в Україні', alt='')
