--- a/includes/shops.pug
+++ b/includes/shops.pug
@@ -111,7 +111,7 @@ block content
             a(href='https://comfy.ua', target='_blank') comfy.ua
           li
             div.icon.citrus.ua
-            a(href='https://letyshops.com/r/citrus-ua-4qh7st9dcosgcc', target='_blank') citrus.ua`
+            a(href='https://www.citrus.ua/', target='_blank') citrus.ua
             div.icontooinfo.a0repa3(title='Интернет-магазин Цитрус — гаджеты и аксессуары', alt='')
           li
             div.icon.xiaomi.ua
@@ -245,7 +245,7 @@ block content
             div.icontooinfo.a0repa3(title='Чемоданы, галантерея, кожаные сумки по выгодной цене прямо от производителя. Широкий ассортимент дорожных сумок, кошельков, перчаток и мужских ремней в интернет-магазин Puccini', alt='')
           li
             div.icon.ombre.ua
-            a(href='', target='_blank') ombre.ua`
+            a(href='https://ombre.ua/', target='_blank') ombre.ua
             div.icontooinfo.a0repa3(title='OMBRE: одежда мужская онлайн. Интернет-магазин одежды', alt='')
           li
             div.icon.footshop.ua
@@ -405,5 +405,5 @@ block content
         ul
           li
             div.icon.ru.airbnb.com
-            a(href='https://letyshops.com/r/airbnb-4qh7st9ddwo48w', target='_blank') ru.airbnb.com`
+            a(href='https://ru.airbnb.com/host/homes', target='_blank') ru.airbnb.com`
             div.icontooinfo.a0repa3(title='Сдайте дом, квартиру или комнату и получайте дополнительный доход. Создание объявления абсолютно бесплатно. Отпускное жилье, дома, впечатления и места: находите приключения поблизости или далеко от дома, открывайте для себя уникальное жилье, впечатления и места по всему миру. ', alt='')
