--- a/includes/index.pug
+++ b/includes/index.pug
@@ -172,6 +172,10 @@ block content
             a(href='https://gas.ua/', target='_blank') naftogaz
             span.opisi Кабин.Газ.2019
           li
+            div.icon.gasolina-online.com
+            a(href='https://gasolina-online.com/', target='_blank') gasolina
+            span.opisi Каб.Газ.(доставка)
+          li
             div.icon.minfin.com.ua
             a(href='https://index.minfin.com.ua/tariff/electric/', target='_blank') minfin.com
             span.opisi оф.цена.электр.
@@ -179,6 +183,12 @@ block content
             div.icon.kresc.com.ua
             a(href='https://www.kresc.com.ua/', target='_blank') kresc.com.ua
             span.opisi КОЕК
+            a(href='https://youtu.be/qIJYbNR_l6g', target='_blank')
+              div.icontooinfo.a0youtubeinform(title='Відеоінструкція. Процес реєстрації та огляд особистого кабінету на офіційному сайті компанії ТОВ Кіровоградська обласна ЕК', alt='')
+          li
+            div.icon.a0pencil-1(title='Текстовая информация', alt='')
+            a(href='https://koek.billing.city/login', target='_blank') Кабінет електро 2020
+            div.icontooinfo.a0repa3(title='Огляд листівки від КОЕК', alt='')
             a(href='https://youtu.be/qIJYbNR_l6g', target='_blank')
               div.icontooinfo.a0youtubeinform(title='Відеоінструкція. Процес реєстрації та огляд особистого кабінету на офіційному сайті компанії ТОВ Кіровоградська обласна ЕК', alt='')
           li
@@ -197,8 +207,7 @@ block content
               div.icontooinfo.a0youtubeinform(title='Видеоинструкция. Как узнать суму задолженности и ее оплатить', alt='')
           li
             div.icon.skylink_vk
-            a(href='http://sky-link.com.ua/', target='_blank') sky-link.com.ua
-            span.opisi Sky-link
+            a(href='http://sky-link.com.ua/', target='_blank') Sky-link
           li
             div.icon.kyivstar.ua
             a(href='https://kyivstar.ua/', target='_blank') kyivstar.ua
@@ -423,27 +432,17 @@ block content
             div.icontooinfo.a0repa3(title='Repka.UA - Лучший сервис и условия доставки по всей Украине. Ноутбуки Смартфоны Бытовая техника Наручные часы Товары для отдыха', alt='')
           li
             div.icon.a0pencil-1(title='Текстовая информация', alt='')
-            a(href='https://koek.billing.city/login', target='_blank') Кабінет електро 2020
-            div.icontooinfo.a0repa3(title='Огляд листівки від КОЕК', alt='')
-            a(href='https://youtu.be/qIJYbNR_l6g', target='_blank')
-              div.icontooinfo.a0youtubeinform(title='Відеоінструкція. Процес реєстрації та огляд особистого кабінету на офіційному сайті компанії ТОВ Кіровоградська обласна ЕК', alt='')
-          li
-            div.icon.a0pencil-1(title='Текстовая информация', alt='')
             a(href='https://public.tableau.com/profile/publicviz#!/vizhome/monitor_15841091301660/sheet0', target='_blank') Карта коронавируса UA
             div.icontooinfo.a0repa3(title='Карта Украины с позначками где были зафиксированные случаи', alt='')
           li
             div.icon.a0pencil-1(title='Текстовая информация', alt='')
-            a(href='https://experience.arcgis.com/experience/685d0ace521648f8a5beeeee1b9125cd', target='_blank') Карта коронавируса MIR
+            a(href='https://covid19.who.int/', target='_blank') Карта коронавируса MIR
             div.icontooinfo.a0repa3(title='Вся статистика по коронавирусу, по всей земле', alt='')
           li
             div.icon.ubki.ua
             a(href='https://www.ubki.ua/ru/', target='_blank') ubki.ua
             span.opisi Кредит ИНФО
             div.icontooinfo.a0repa3(title='Тут можно узнать сумы про все ВАШИ кредиты. Один раз в год предоставляется бесплатн, повторный заказ — 50 грн. Украинское бюро кредитных историй - крупнейшее бюро в Украине ', alt='')
-          li
-            div.icon.a0pencil-1(title='Текстовая информация', alt='')
-            a(href='http://zakladki.at.ua/forum/24-9-1', target='_blank') Как платить за газ 2020
-            div.icontooinfo.a0repa3(title='С января 2020 года украинцы начали получать платежки за газ, в которых теперь предусмотрена новая схема оплаты - отдельно за потребленный газ и абонплата за его транспортировку. ', alt='')
           li
             div.icon.silvergames
             a(href='https://www.silvergames.com/ru/', target='_blank') silvergames.com
@@ -472,10 +471,6 @@ block content
             div.icon.sneakerstudio.com.ua
             a(href='https://letyshops.com/r/sneakerstudio-ua-4qh7st9ddq0ww8', target='_blank') sneakerstudio.com.ua`
             div.icontooinfo.a0repa3(title='Раздел-Магазины. Продажа кроссовок, обуви ✔ оригинальные бренды ✔ бесплатная доставка ✔цены ниже, чем у конкурентов', alt='')
-          li
-            div.icon.exmo_com
-            a(href='https://exmo.com/?ref=1654818', target='_blank') exmo.com`
-            div.icontooinfo.a0repa3(title='Раздел-Банкинг. Надежная биткоин биржа и трейдинг платформа стран СНГ', alt='')
           li
             div.icon.a0youtubeinform(title='Видео информация', alt='')
             a(href='https://youtu.be/BdZQy6upWFc', target='_blank') Настройка ZAKLADOK
