--- a/includes/shops.pug
+++ b/includes/shops.pug
@@ -363,10 +363,10 @@ block content
         ul
           li
             div.icon.yakaboo.ua
-            a(href='https://www.yakaboo.ua/', target='_blank') yakaboo.ua
+            a(href='https://letyshops.com/r/yakaboo-2ba5dc8a4c53', target='_blank') yakaboo.ua`
           li
             div.icon.grenka.ua
-            a(href='https://grenka.ua/', target='_blank') grenka.ua
+            a(href='https://letyshops.com/r/grenka-ua-a5dec91a4eea', target='_blank') grenka.ua`
           li
             div.icon.bambook.com
             a(href='https://letyshops.com/r/bambook-ua-4qh7st9ddvk04k', target='_blank') bambook.com`
