--- a/includes/programs.pug
+++ b/includes/programs.pug
@@ -58,6 +58,10 @@ block content
           span.badge.badge-warning Загрузить браузеры
         ul
           li
+            div.icon.CryptoTab
+            a(href='https://cryptotabbrowser.com/17032365', target='_blank') CryptoTab`
+            div.icontooinfo.a0repa3(title='Это браузер для работы и паралельного майнинга биткоинов. Вы в интернете, и Вам понемногу капает Bitcoin', alt='')
+          li
             div.icon.prog_GoogleChrome
             a(href='https://www.google.com/intl/ru_ALL/chrome/', target='_blank') Google Chrome
           li
