--- a/includes/index.pug
+++ b/includes/index.pug
@@ -414,8 +414,12 @@ block content
       .group
         .group-title
           a(href='http://zakladki.at.ua/', target='_blank')
-            span.badge.badge-danger Обновки в закладках: v.2020-08-07
+            span.badge.badge-danger Обновки в закладках: v.2020-12-01
         ul
+          li
+            div.icon.CryptoTab
+            a(href='https://cryptotabbrowser.com/17032365', target='_blank') CryptoTab`
+            div.icontooinfo.a0repa3(title='Это браузер для работы и паралельного майнинга биткоинов. Вы в интернете, и Вам понемногу капает Bitcoin', alt='')
           li
             div.icon.a0pencil-1(title='Текстовая информация', alt='')
             a(href='https://reachinitiative.maps.arcgis.com/apps/webappviewer/index.html?id=b8ea3d22c51246528abb47ef94f20edb', target='_blank') Карта-колір COVID UA
