--- a/includes/index.pug
+++ b/includes/index.pug
@@ -350,6 +350,9 @@ block content
             a(href='http://filmitorrent.net/', target='_blank') filmitorrent_TOP
             div.icontooinfo.a0_Group_m(title='Для скачивания нужна программа TORRENT', alt='')
           li
+            div.icon.rutor.info
+            a(href='http://rutor.info/', target='_blank') rutor.info
+          li
             div.icon.bible-teka.com
             a(href='https://bible-teka.com/synodal/', target='_blank') bible-teka
             span.opisi Библия онлайн
