--- a/includes/bank.pug
+++ b/includes/bank.pug
@@ -124,16 +124,16 @@ block content
         ul
           li
             div.icon.alfabank.ua
-            a(href='https://letyshops.com/r/alfa-bank-ukraina-6ad28531522e', target='_blank') alfabank.ua`
+            a(href='https://alfabank.ua/', target='_blank') alfabank.ua
           li
             div.icon.ideabank.ua
             a(href='https://www.ideabank.ua/', target='_blank') ideabank.ua
           li
             div.icon.hotline.finance
-            a(href='https://letyshops.com/r/hotline-4qh7st9ddxk40o', target='_blank') hotline.finance`
+            a(href='https://letyshops.com/r/hotline-17c808f3d8f4', target='_blank') hotline.finance`
           li
             div.icon.vuso.ua
-            a(href='https://letyshops.com/r/vuso-ua-4qh7st9ddxmosk', target='_blank') vuso.ua`
+            a(href='https://letyshops.com/r/vuso-ua-754fdba3399e', target='_blank') vuso.ua`
     .col-sm
       .group
         .group-title
