--- a/includes/index.pug
+++ b/includes/index.pug
@@ -296,38 +296,38 @@ block content
             span.opisi Все дешевле
           li
             div.icon.best.aliexpress.com
-            a(href='https://letyshops.com/r/aliexpress-4qh7st9dci04g0', target='_blank') best.aliexpress.com`
+            a(href='https://letyshops.com/r/aliexpress-ww-8e0f7c701af4', target='_blank') best.aliexpress.com`
           li
             div.icon.rozetka.com.ua
             a(href='https://rozetka.com.ua/', target='_blank') rozetka.com.ua
           li
             div.icon.stylus.ua
-            a(href='https://letyshops.com/r/stylus-4qh7st9dcjok8o', target='_blank') stylus.ua`
+            a(href='https://letyshops.com/r/stylus-19dd22ceba8e', target='_blank') stylus.ua`
           li
             div.icon.skidka.ua
-            a(href='https://letyshops.com/r/skidka-ua-4qh7st93i7408s', target='_blank') skidka.ua`
+            a(href='https://letyshops.com/r/skidka-ua-d1993e48a6a0', target='_blank') skidka.ua`
           li
             div.icon.moyo.ua
-            a(href='https://letyshops.com/r/moyo-ua-4qh7st9dcjacc8', target='_blank') moyo.ua`
+            a(href='https://letyshops.com/r/moyo-ua-4c9901a4771b', target='_blank') moyo.ua`
           li
             div.icon.f.ua
-            a(href='https://letyshops.com/r/f-ua-tot-samyi-magazin-4qh7st9dcoowkk', target='_blank') f.ua`
+            a(href='https://letyshops.com/r/f-ua-tot-samyi-magazin-260ad56e26ee', target='_blank') f.ua`
           li
             div.icon.allo.ua
-            a(href='https://letyshops.com/r/allo-3f4b6c4857e7', target='_blank') allo.ua`
+            a(href='https://letyshops.com/r/allo-f78863faf441', target='_blank') allo.ua`
           li
             div.icon.xiaomi.ua
-            a(href='https://letyshops.com/r/xiaomi-ua-4qh7st9dcpa80o', target='_blank') xiaomi.ua`
+            a(href='https://letyshops.com/r/xiaomi-ua-f1f231622461', target='_blank') xiaomi.ua`
           li
-            div.icon.bonprix.ua
-            a(href='https://letyshops.com/r/bonprix-ua-4qh7st9ddo6cs0', target='_blank') bonprix.ua`
+            div.icon.intertop.ua
+            a(href='https://letyshops.com/r/intertop-ua-cc02944317d1', target='_blank') intertop.ua`
           li
             div.icon.med-magazin.ua
-            a(href='https://letyshops.com/r/med-magazin-ua-4qh7st9ddu2oog', target='_blank') med-magazin.ua`
+            a(href='https://letyshops.com/r/med-magazin-ua-4ae19f26a235', target='_blank') med-magazin.ua`
             div.icontooinfo.a0repa3(title='Med-Magazin - сеть магазинов медтехники, медоборудования и товаров для здоровья в Украине', alt='')
           li
             div.icon.apteka24.ua
-            a(href='https://letyshops.com/r/apteka24-71012859b26c', target='_blank') apteka24.ua`
+            a(href='https://letyshops.com/r/apteka24-743722bca4b7', target='_blank') apteka24.ua`
       .group
         .group-title
           a(href='/others.html')
