--- a/includes/_layout.pug
+++ b/includes/_layout.pug
@@ -60,7 +60,7 @@ html(lang="ru")
 
           .col-sm.footer-col
             .kolobok
-              a.btn.btn-primary.btn-sm(href='https://www.ipay.ua/ru/p2p/default/constructor/01e03758f825e60c5dc13b12941f5ddf', title='Переслать немного денег на содержание сайта (заранее СПАСИБО Всем кто перекинет деньжат)', role='button', target='_blank') Поддержать сайт
+              a.btn.btn-primary.btn-sm(href='https://docs.google.com/document/d/15VLtvFvXNxhkXU_ZH74387e289Rx6If2Zmrp4m8KFAc', title='Переслать немного денег на содержание сайта (заранее СПАСИБО Всем кто перекинет деньжат)', role='button', target='_blank') Поддержать сайт
 
           .col-sm.footer-col
             .kolobok
