--- a/includes/communal.pug
+++ b/includes/communal.pug
@@ -96,12 +96,8 @@ block content
         ul
           li
             div.icon.ukrtelecom.ua
-            a(href='https://new.ukrtelecom.ua/internet/', target='_blank') ukrtelecom
-            span.opisi ТАРИФЫ
-          li
-            div.icon.ukrtelecom.ua
-            a(href='https://new.ukrtelecom.ua/payment/#generate-bill', target='_blank') ukrtelecom
-            span.opisi СЧЕТ
+            a(href='https://ukrtelecom.ua/', target='_blank') ukrtelecom
+            span.opisi СЧЕТ/ТАРИФЫ
             a(href='https://youtu.be/WYhA_JFRVik', target='_blank')
               div.icontooinfo.a0youtubeinform(title='Видеоинструкция. Как узнать суму задолженности и ее оплатить', alt='')
           li
