--- a/includes/index.pug
+++ b/includes/index.pug
@@ -190,8 +190,8 @@ block content
               div.icontooinfo.a0youtubeinform(title='Відеоінструкція. Процес реєстрації та огляд особистого кабінету на офіційному сайті компанії ТОВ Кіровоградська обласна ЕК', alt='')
           li
             div.icon.ukrtelecom.ua
-            a(href='https://new.ukrtelecom.ua/payment/#generate-bill', target='_blank') ukrtelecom
-            span.opisi Укртел.СЧЕТ
+            a(href='https://ukrtelecom.ua/', target='_blank') ukrtelecom
+            span.opisi СЧЕТ/ТАРИФЫ
             a(href='https://youtu.be/WYhA_JFRVik', target='_blank')
               div.icontooinfo.a0youtubeinform(title='Видеоинструкция. Как узнать суму задолженности и ее оплатить', alt='')
           li
