--- a/includes/index.pug
+++ b/includes/index.pug
@@ -233,7 +233,7 @@ block content
             span.opisi Онлайн
           li
             div.icon.payoneer.com
-            a(href='https://www.payoneer.com/raf/?rid=0FA0C022-2289-43EC-8770-3B4409BD83AF', target='_blank') payoneer`
+            a(href='https://www.payoneer.com/', target='_blank') payoneer
             span.opisi Интерн.кошелек
           li
             div.icon.payeer.com
