--- a/includes/index.pug
+++ b/includes/index.pug
@@ -296,38 +296,38 @@ block content
             span.opisi Все дешевле
           li
             div.icon.best.aliexpress.com
-            a(href='https://letyshops.com/r/aliexpress-ww-8e0f7c701af4', target='_blank') best.aliexpress.com`
+            a(href='https://letyshops.com/r/aliexpress-ww-288bce24ac9a', target='_blank') best.aliexpress.com`
           li
             div.icon.rozetka.com.ua
-            a(href='https://rozetka.com.ua/', target='_blank') rozetka.com.ua
-          li
-            div.icon.stylus.ua
-            a(href='https://letyshops.com/r/stylus-19dd22ceba8e', target='_blank') stylus.ua`
-          li
-            div.icon.skidka.ua
-            a(href='https://letyshops.com/r/skidka-ua-d1993e48a6a0', target='_blank') skidka.ua`
-          li
-            div.icon.moyo.ua
-            a(href='https://letyshops.com/r/moyo-ua-4c9901a4771b', target='_blank') moyo.ua`
-          li
-            div.icon.f.ua
-            a(href='https://letyshops.com/r/f-ua-tot-samyi-magazin-260ad56e26ee', target='_blank') f.ua`
+            a(href='https://letyshops.com/r/rozetka-1bf2104efe2d', target='_blank') rozetka.com.ua`
           li
             div.icon.allo.ua
-            a(href='https://letyshops.com/r/allo-f78863faf441', target='_blank') allo.ua`
+            a(href='https://letyshops.com/r/allo-fdff83d9e607', target='_blank') allo.ua`
+          li
+            div.icon.moyo.ua
+            a(href='https://letyshops.com/r/moyo-ua-98af1fd3453d', target='_blank') moyo.ua`
+          li
+            div.icon.stylus.ua
+            a(href='https://letyshops.com/r/stylus-20dc1c96e7c7', target='_blank') stylus.ua`
+          li
+            div.icon.skidka.ua
+            a(href='https://letyshops.com/r/skidka-ua-38859dfd47b9', target='_blank') skidka.ua`
+          li
+            div.icon.f.ua
+            a(href='https://letyshops.com/r/f-ua-tot-samyi-magazin-eacd5b66c959', target='_blank') f.ua`
           li
             div.icon.xiaomi.ua
-            a(href='https://letyshops.com/r/xiaomi-ua-f1f231622461', target='_blank') xiaomi.ua`
+            a(href='https://letyshops.com/r/xiaomi-ua-d11562e6217b', target='_blank') xiaomi.ua`
           li
             div.icon.intertop.ua
-            a(href='https://letyshops.com/r/intertop-ua-cc02944317d1', target='_blank') intertop.ua`
+            a(href='https://letyshops.com/r/intertop-ua-d4e3bd859cbf', target='_blank') intertop.ua`
           li
             div.icon.med-magazin.ua
-            a(href='https://letyshops.com/r/med-magazin-ua-4ae19f26a235', target='_blank') med-magazin.ua`
+            a(href='https://letyshops.com/r/med-magazin-ua-db16742e5c0c', target='_blank') med-magazin.ua`
             div.icontooinfo.a0repa3(title='Med-Magazin - сеть магазинов медтехники, медоборудования и товаров для здоровья в Украине', alt='')
           li
             div.icon.apteka24.ua
-            a(href='https://letyshops.com/r/apteka24-743722bca4b7', target='_blank') apteka24.ua`
+            a(href='https://www.apteka24.ua/', target='_blank') apteka24.ua
       .group
         .group-title
           a(href='/others.html')
@@ -417,7 +417,7 @@ block content
       .group
         .group-title
           a(href='http://zakladki.at.ua/', target='_blank')
-            span.badge.badge-danger Обновки в закладках: v.2020-12-01
+            span.badge.badge-danger Обновки в закладках: v.2022-01-05
         ul
           li
             div.icon.a0pencil-1(title='Текстовая информация', alt='')
@@ -436,34 +436,13 @@ block content
             a(href='https://covid19.who.int/', target='_blank') Карта коронавируса MIR
             div.icontooinfo.a0repa3(title='Вся статистика по коронавирусу, по всей земле', alt='')
           li
-            div.icon.ubki.ua
-            a(href='https://www.ubki.ua/ru/', target='_blank') ubki.ua
-            span.opisi Кредит ИНФО
-            div.icontooinfo.a0repa3(title='Тут можно узнать сумы про все ВАШИ кредиты. Один раз в год предоставляется бесплатн, повторный заказ — 50 грн. Украинское бюро кредитных историй - крупнейшее бюро в Украине ', alt='')
-          li
             div.icon.silvergames
             a(href='https://www.silvergames.com/ru/', target='_blank') silvergames.com
             div.icontooinfo.a0repa7(title='Играть В Классные Бесплатные Онлайн Игры На Silvergames.com', alt='')
           li
-            div.icon.avto.pro
-            a(href='https://avto.pro/', target='_blank') avto.pro
-            div.icontooinfo.a0repa7(title='Автозапчасти без посредников. АвтоПро - площадка для продажи и покупки запчастей для иномарок, новые и бу запчасти, выгодные цены на авторазборках.', alt='')
-          li
             div.icon.a0youtubeinform(title='Видео информация', alt='')
             a(href='https://zakladki.github.io/media.html', target='_blank') Обновка.MP3.UA+ZAP
             div.icontooinfo.a0repa3(title='Раздел-Медиа. Обновлен плеер для прослушивания украинской/русской/зарубежной музыки', alt='')
-          li
-            div.icon.notino.com
-            a(href='https://letyshops.com/r/notino-ua-4qh7st9ddssg0c', target='_blank') notino.com`
-            div.icontooinfo.a0repa3(title='Раздел-Магазины. Iнтернет магазин парфумів: Парфуми в акції тижня ✓ Широкий вибір парфумерії та косметики ✓ Гарантія безпечної покупки – Пункт видачі в Києві.', alt='')
-          li
-            div.icon.krauff.com
-            a(href='https://letyshops.com/r/krauff-ua-4qh7st9dcqask8', target='_blank') krauff.com`
-            div.icontooinfo.a0repa3(title='Раздел-Магазины. Krauff – немецкая элитная посуда. Самый полный каталог посуды Krauff. Бесплатная доставка. Гарантия качества.', alt='')
-          li
-            div.icon.prego.ua
-            a(href='https://letyshops.com/r/prego-ua-7abce57c019e', target='_blank') prego.ua`
-            div.icontooinfo.a0repa3(title='Раздел-Магазины. Интернет магазин обуви в Киеве ✿ Обувь PREGO ✿ Широкий ассортимент модной и брендовой обуви и сумок по доступным ценам ➦ Доставка по Украине', alt='')
           li
             div.icon.a0youtubeinform(title='Видео информация', alt='')
             a(href='https://youtu.be/BdZQy6upWFc', target='_blank') Настройка ZAKLADOK
