--- a/includes/_layout.pug
+++ b/includes/_layout.pug
@@ -148,9 +148,9 @@ html(lang="ru")
 
           .col-sm.footer-col
             .kolobok
-              a(href='http://zakladki.at.ua/', target='_blank') Беседка
+              a(href='https://t.me/zakladki_top', target='_blank') Беседка
               |  / 
-              a(href='http://zakladki.at.ua/index/0-3', target='_blank') Задать вопрос
+              a(href='https://t.me/zakladki_top', target='_blank') Задать вопрос
     script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js', integrity='sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut', crossorigin='anonymous')
     script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js', integrity='sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k', crossorigin='anonymous')
     script(src='js/main.js')
