--- a/includes/index.pug
+++ b/includes/index.pug
@@ -23,10 +23,10 @@ block content
           li
             div.google.icon
             a(href='https://www.google.com.ua/', target='_blank') Поиск Google
-          li
-            div.yandex.icon
-            a(href='https://yandex.ua/', target='_blank') Поиск Yandex
-            div.icontoo.a0VPN1(title='Для работы нужен VPN', alt='')
+          /* li */
+            /* div.yandex.icon */
+            /* a(href='https://yandex.ua/', target='_blank') Поиск Yandex */
+            /* div.icontoo.a0VPN1(title='Для работы нужен VPN', alt='') */
           li
             div.icon.translate.google.com.ua
             a(href='https://translate.google.com.ua/', target='_blank') Переводчик Google
