--- a/includes/index.pug
+++ b/includes/index.pug
@@ -45,10 +45,16 @@ block content
             div.icon.facebook.com
             a(href='https://www.facebook.com/', target='_blank') Facebook.com
           li
+            div.icon.instagram.com
+            a(href='https://www.instagram.com/', target='_blank') Instagram.com
+          li
+            div.icon.twitter.com
+            a(href='https://twitter.com/', target='_blank') Twitter.com
+          //li
             div.icon.vk.com
             a(href='https://vk.com/', target='_blank') ВКонтакте
             div.icontoo.a0VPN1(title='Для работы нужен VPN', alt='')
-          li
+          //li
             div.icon.ok.ru
             a(href='https://ok.ru/', target='_blank') Однокласники
             div.icontoo.a0VPN1(title='Для работы нужен VPN', alt='')
