--- a/includes/index.pug
+++ b/includes/index.pug
@@ -423,20 +423,16 @@ block content
       .group
         .group-title
           a(href='http://zakladki.at.ua/', target='_blank')
-            span.badge.badge-danger Обновки в закладках: v.2022-01-05
+            span.badge.badge-danger Обновки в закладках: v.2022-03-15
         ul
           li
             div.icon.a0pencil-1(title='Текстовая информация', alt='')
-            a(href='https://reachinitiative.maps.arcgis.com/apps/webappviewer/index.html?id=b8ea3d22c51246528abb47ef94f20edb', target='_blank') Карта-колір COVID UA
-            div.icontooinfo.a0repa3(title='Візуалізація епідемічних показників на рівні районів та міст обласного значення', alt='')
+            a(href='https://www.google.com/maps/d/u/0/viewer?mid=1ROxxPyw0nPAa5HDAABCBU-IDECabGw3-&ll=49.44530853384404%2C32.06195504902167&z=7', target='_blank') Карта бойових дій в Україні
+            div.icontooinfo.a0repa3(title='Візуалізація, - онлайн карта бойових дій в Україні', alt='')
           li
             div.icon.repka.ua
             a(href='https://letyshops.com/r/repka-ua-7352c7232593', target='_blank') repka.ua`
             div.icontooinfo.a0repa3(title='Repka.UA - Лучший сервис и условия доставки по всей Украине. Ноутбуки Смартфоны Бытовая техника Наручные часы Товары для отдыха', alt='')
-          li
-            div.icon.a0pencil-1(title='Текстовая информация', alt='')
-            a(href='https://public.tableau.com/profile/publicviz#!/vizhome/monitor_15841091301660/sheet0', target='_blank') Карта коронавируса UA
-            div.icontooinfo.a0repa3(title='Карта Украины с позначками где были зафиксированные случаи', alt='')
           li
             div.icon.a0pencil-1(title='Текстовая информация', alt='')
             a(href='https://covid19.who.int/', target='_blank') Карта коронавируса MIR
