--- a/includes/index.pug
+++ b/includes/index.pug
@@ -427,7 +427,7 @@ block content
         ul
           li
             div.icon.a0pencil-1(title='Текстовая информация', alt='')
-            a(href='https://www.google.com/maps/d/u/0/viewer?mid=1ROxxPyw0nPAa5HDAABCBU-IDECabGw3-&ll=49.44530853384404%2C32.06195504902167&z=7', target='_blank') Карта бойових дій в Україні
+            a(href='https://www.google.com/maps/d/u/0/viewer?mid=1ROxxPyw0nPAa5HDAABCBU-IDECabGw3-&ll=49.44530853384404%2C32.06195504902167&z=7', target='_blank') Карта війни в Україні
             div.icontooinfo.a0repa3(title='Візуалізація, - онлайн карта бойових дій в Україні', alt='')
           li
             div.icon.repka.ua
