--- a/includes/index.pug
+++ b/includes/index.pug
@@ -423,11 +423,15 @@ block content
       .group
         .group-title
           a(href='http://zakladki.at.ua/', target='_blank')
-            span.badge.badge-danger Обновки в закладках: v.2022-03-15
+            span.badge.badge-danger Обновки в закладках: v.2022-03-30
         ul
           li
             div.icon.a0pencil-1(title='Текстовая информация', alt='')
-            a(href='https://www.google.com/maps/d/u/0/viewer?mid=1ROxxPyw0nPAa5HDAABCBU-IDECabGw3-&ll=49.44530853384404%2C32.06195504902167&z=7', target='_blank') Карта війни в Україні
+            a(href='https://war.ukrzen.in.ua/alerts/', target='_blank') Карта повітряних тривог
+            div.icontooinfo.a0repa3(title='Візуалізація, - онлайн карта повітряних тривог в Україні', alt='')        
+          li
+            div.icon.a0pencil-1(title='Текстовая информация', alt='')
+            a(href='https://liveuamap.com/', target='_blank') Карта війни в Україні
             div.icontooinfo.a0repa3(title='Візуалізація, - онлайн карта бойових дій в Україні', alt='')
           li
             div.icon.repka.ua
