--- a/includes/index.pug
+++ b/includes/index.pug
@@ -18,28 +18,28 @@ block content
       .group
         .group-title
           a(href='/others.html')
-            span.badge.badge-dark Поиск/Перевод/Граматика
+            span.badge.badge-dark Пошук/Перекладач/Граматика
         ul
           li
             div.google.icon
-            a(href='https://www.google.com.ua/', target='_blank') Поиск Google
+            a(href='https://www.google.com.ua/', target='_blank') Пошук Google
           //li
             div.yandex.icon
             a(href='https://yandex.ua/', target='_blank') Поиск Yandex
             div.icontoo.a0VPN1(title='Для работы нужен VPN', alt='')
           li
             div.icon.translate.google.com.ua
-            a(href='https://translate.google.com.ua/', target='_blank') Переводчик Google
+            a(href='https://translate.google.com.ua/', target='_blank') Перекладач Google
           li
             div.icon.translate.ru
-            a(href='https://www.translate.ru/', target='_blank') Переводчик PROMT
+            a(href='https://www.translate.ru/', target='_blank') Перекладач PROMT
           li
             div.icon.languagetool.org
             a(href='https://languagetool.org/uk/', target='_blank') Граматика от languagetool
       .group
         .group-title
           a(href='/social.html')
-            span.badge.badge-dark Социум
+            span.badge.badge-dark Соціум
         ul
           li
             div.icon.facebook.com
@@ -60,21 +60,21 @@ block content
             div.icontoo.a0VPN1(title='Для работы нужен VPN', alt='')
           li
             div.icon.gmail
-            a(href='https://mail.google.com', target='_blank') почта_gmail
+            a(href='https://mail.google.com', target='_blank') пошта_gmail
           li
             div.icon.mail.ukr.net
-            a(href='https://accounts.ukr.net/login', target='_blank') почта_ukr.net
+            a(href='https://accounts.ukr.net/login', target='_blank') пошта_ukr.net
           li
             div.icon.webmail.meta.ua
-            a(href='https://webmail.meta.ua/', target='_blank') почта_meta.ua
+            a(href='https://webmail.meta.ua/', target='_blank') пошта_meta.ua
           li
             div.icon.e.mail.ru
-            a(href='https://e.mail.ru/login', target='_blank') почта_mail.ru
+            a(href='https://e.mail.ru/login', target='_blank') пошта_mail.ru
             div.icontoo.a0VPN1(title='Для работы нужен VPN', alt='')
       .group
         .group-title
           a(href='/news.html')
-            span.badge.badge-dark Новости
+            span.badge.badge-dark Новини
         ul
           li
             div.icon.ukr.net
@@ -94,7 +94,7 @@ block content
       .group
         .group-title
           a(href='/media.html')
-            span.badge.badge-dark Медиа
+            span.badge.badge-dark Медіа
         ul
           li
             div.icon.youtube
@@ -127,7 +127,7 @@ block content
       .group
         .group-title
           a(href='/games.html')
-            span.badge.badge-dark Игры
+            span.badge.badge-dark Ігри
         ul
           li
             div.icon.playset.ru
@@ -150,7 +150,7 @@ block content
       .group
         .group-title
           a(href='/games.html')
-            span.badge.badge-dark Игры/Букмек.конторы
+            span.badge.badge-dark Ігри/Букмек.контори
         ul
           li
             div.icon.parimatch.com
@@ -169,11 +169,11 @@ block content
           li
             div.icon.minfin.com.ua
             a(href='https://index.minfin.com.ua/tariff/gas/', target='_blank') minfin.com
-            span.opisi оф.цена.газ
+            span.opisi оф.ціна.газ
           li
             div.icon.naftogazpostach.com
             a(href='https://gas.ua/', target='_blank') naftogaz
-            span.opisi Кабин.Газ.2019
+            span.opisi Кабін.Газ.2019
           li
             div.icon.gasolina-online.com
             a(href='https://gasolina-online.com/', target='_blank') gasolina
@@ -181,7 +181,7 @@ block content
           li
             div.icon.minfin.com.ua
             a(href='https://index.minfin.com.ua/tariff/electric/', target='_blank') minfin.com
-            span.opisi оф.цена.электр.
+            span.opisi оф.ціна.електр.
           li
             div.icon.kresc.com.ua
             a(href='https://www.kresc.com.ua/', target='_blank') kresc.com.ua
@@ -197,7 +197,7 @@ block content
           li
             div.icon.ukrtelecom.ua
             a(href='https://ukrtelecom.ua/', target='_blank') ukrtelecom
-            span.opisi СЧЕТ/ТАРИФЫ
+            span.opisi Оплата
             a(href='https://youtu.be/WYhA_JFRVik', target='_blank')
               div.icontooinfo.a0youtubeinform(title='Видеоинструкция. Как узнать суму задолженности и ее оплатить', alt='')
           li
@@ -223,7 +223,7 @@ block content
       .group
         .group-title
           a(href='/bank.html')
-            span.badge.badge-dark Банкинг
+            span.badge.badge-dark Банкінг
         ul
           li
             div.icon.privat24.ua
@@ -240,11 +240,11 @@ block content
           li
             div.icon.payoneer.com
             a(href='https://www.payoneer.com/', target='_blank') payoneer
-            span.opisi Интерн.кошелек
+            span.opisi Інтерн.гаманець
           li
             div.icon.payeer.com
             a(href='https://payeer.com/?partner=1687223', target='_blank') payeer`
-            span.opisi Интерн.кошелек
+            span.opisi Інтерн.гаманець
           li
             div.icon.minfin.com.ua
             a(href='https://minfin.com.ua/currency/', target='_blank') minfin.com.ua
@@ -252,7 +252,7 @@ block content
           li
             div.icon.bestchange.ru
             a(href='https://www.bestchange.ru/', target='_blank') bestchange.ru
-            span.opisi Обмен валют
+            span.opisi Обмін валют
           // тут реклама от ГУГЛ
           //- script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
           //- ins.adsbygoogle(style='display:inline-block;width:234px;height:60px', data-ad-client='ca-pub-3065705668384801', data-ad-slot='4257475217')
@@ -263,7 +263,7 @@ block content
       .group
         .group-title
           a(href='/market.html')
-            span.badge.badge-dark Отследить посылку
+            span.badge.badge-dark Відслідкувати посилку
         ul
           li
             div.icon.novaposhta.ua
@@ -274,7 +274,7 @@ block content
       .group
         .group-title
           a(href='/market.html')
-            span.badge.badge-dark Рынок
+            span.badge.badge-dark Ринок
         ul
           li
             div.icon.olx.ua
@@ -294,7 +294,7 @@ block content
       .group
         .group-title
           a(href='/shops.html')
-            span.badge.badge-dark Магазины
+            span.badge.badge-dark Магазини
         ul
           li
             div.icon.letyshops.com
@@ -337,7 +337,7 @@ block content
       .group
         .group-title
           a(href='/others.html')
-            span.badge.badge-dark Другое
+            span.badge.badge-dark Інше
         ul
           li
             div.icon.speed2
@@ -361,14 +361,14 @@ block content
           li
             div.icon.bible-teka.com
             a(href='https://bible-teka.com/synodal/', target='_blank') bible-teka
-            span.opisi Библия онлайн
+            span.opisi Біблія онлайн
           li
             div.icon.slovohrista.org
             a(href='http://slovohrista.org/', target='_blank') slovohrista.org
           li
             div.icon.vshkole.com
             a(href='https://vshkole.com/', target='_blank') vshkole
-            span.opisi ГДЗ/учебники
+            span.opisi ГДЗ/підручники
           // тут реклама от ГУГЛ
           //- script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
           //- ins.adsbygoogle(style='display:inline-block;width:234px;height:60px', data-ad-client='ca-pub-3065705668384801', data-ad-slot='4257475217')
@@ -403,7 +403,7 @@ block content
             a(href='https://www.meteoprog.ua/ru/review/Novomirgorod/', target='_blank') Погода_Meteoprog
           li
             div.icon.vk.com
-            a(href='https://vk.com/novomyrhorod_baraholka', target='_blank') рынок.БАРАХОЛКА
+            a(href='https://vk.com/novomyrhorod_baraholka', target='_blank') ринок.БАРАХОЛКА
             div.icontoo.a0VPN1(title='Для работы нужен VPN', alt='')
           li
             div.icon.youtube
@@ -439,7 +439,7 @@ block content
             div.icontooinfo.a0repa3(title='Repka.UA - Лучший сервис и условия доставки по всей Украине. Ноутбуки Смартфоны Бытовая техника Наручные часы Товары для отдыха', alt='')
           li
             div.icon.a0pencil-1(title='Текстовая информация', alt='')
-            a(href='https://covid19.who.int/', target='_blank') Карта коронавируса MIR
+            a(href='https://covid19.who.int/', target='_blank') Карта коронавіруса MIR
             div.icontooinfo.a0repa3(title='Вся статистика по коронавирусу, по всей земле', alt='')
           li
             div.icon.silvergames
@@ -455,7 +455,7 @@ block content
             div.icontooinfo.a0repa3(title='Как быстро настроить ZAKLADKI на компьютере, ноутбуке, смартфоне', alt='')
           li
             div.icon.costaction.com
-            a(href='http://costaction.com/partner/?PHPSESUD=CEADEE4DA51FAECA3ED6C17C6A9191A5', target='_blank') Хранилище файлов`
+            a(href='http://costaction.com/partner/?PHPSESUD=CEADEE4DA51FAECA3ED6C17C6A9191A5', target='_blank') Зберігання файлів`
             div.icontooinfo.a0repa3(title='Раздел-Программы. Вы будете получать деньги за каждое скачивание Вашего файла. Просто загрузите файлы на Turbobit.net и Hitfile.net, обменивайтесь ими со своим друзьями, и незнакомцами через блоги, социальные сети, форумы или свои сайты!', alt='')
 
           // тут реклама от ГУГЛ
