--- a/includes/_nav.pug
+++ b/includes/_nav.pug
@@ -10,14 +10,14 @@ mixin navLink(link, name, iclass)
 
 ul.nav.nav-pills.mb-3.navbar-nav
   +navLink('/', '', 'fas fa-home')
-  +navLink('./social.html', 'Социум')
-  +navLink('./news.html', 'Новости')
-  +navLink('./media.html', 'Медиа')
-  +navLink('./games.html', 'Игры')
+  +navLink('./social.html', 'Соціум')
+  +navLink('./news.html', 'Новини')
+  +navLink('./media.html', 'Медіа')
+  +navLink('./games.html', 'Ігри')
   +navLink('./communal.html', 'Комуналка')
-  +navLink('./bank.html', 'Банкинг')
-  +navLink('./market.html', 'Рынок')
-  +navLink('./shops.html', 'Магазины')
-  +navLink('./others.html', 'Другое')
+  +navLink('./bank.html', 'Банкінг')
+  +navLink('./market.html', 'Ринок')
+  +navLink('./shops.html', 'Магазини')
+  +navLink('./others.html', 'Інше')
   +navLink('./city.html', 'Городок')
   +navLink('./programs.html', '', 'fas fa-microchip')
