--- a/includes/_layout.pug
+++ b/includes/_layout.pug
@@ -60,7 +60,7 @@ html(lang="ru")
 
           .col-sm.footer-col
             .kolobok
-              a.btn.btn-primary.btn-sm(href='https://docs.google.com/document/d/15VLtvFvXNxhkXU_ZH74387e289Rx6If2Zmrp4m8KFAc', title='Переслать немного денег на содержание сайта (заранее СПАСИБО Всем кто перекинет деньжат)', role='button', target='_blank') Поддержать сайт
+              a.btn.btn-primary.btn-sm(href='https://docs.google.com/document/d/15VLtvFvXNxhkXU_ZH74387e289Rx6If2Zmrp4m8KFAc', title='Переслати кошти на утримання сайта (зарані ДЯКУЄМО Всім хто перекине грошенят)', role='button', target='_blank') Підтримати сайт
 
           .col-sm.footer-col
             .kolobok
@@ -90,7 +90,7 @@ html(lang="ru")
                 i.far.fa-envelope.fa-lg(aria-hidden='true')
               a(href='https://t.me/zakladki_top_one', target='_blank', title='Telegram: КАНАЛ в ТЕЛЕГРАМ')
                 i.fab.fa-telegram.fa-lg(aria-hidden='true')
-              a(href='https://youtu.be/BdZQy6upWFc', target='_blank', title='Видеоинструкция: автозапуск ZAKLADOK')
+              a(href='https://youtu.be/BdZQy6upWFc', target='_blank', title='Відеоінструкція: автозапуск ZAKLADOK')
                 i.fas.fa-medkit.fa-lg.coloriconfuter(aria-hidden='true')
                   
           .col-sm.footer-col
@@ -148,9 +148,9 @@ html(lang="ru")
 
           .col-sm.footer-col
             .kolobok
-              a(href='https://t.me/zakladki_top', target='_blank') Беседка
+              a(href='https://t.me/zakladki_top', target='_blank') ЧАТ
               |  / 
-              a(href='https://t.me/zakladki_top', target='_blank') Задать вопрос
+              a(href='https://t.me/zakladki_top', target='_blank') Задати питання
     script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js', integrity='sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut', crossorigin='anonymous')
     script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js', integrity='sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k', crossorigin='anonymous')
     script(src='js/main.js')
