--- a/includes/_layout.pug
+++ b/includes/_layout.pug
@@ -39,7 +39,7 @@ html(lang="ru")
     link(href='styles/menu_button.css', rel='stylesheet')
 
     block title
-      title ZAKLADKI - Список популярных сайтов (ТОП ЗАКЛАДКИ)
+      title ZAKLADKI - Список популярних сайтів (ТОП ЗАКЛАДКИ)
   body
     .container.nav-container
       nav.navbar.navbar-expand-md.fixed-top.navbar-dark.d-flex.justify-content-center
