--- a/includes/city.pug
+++ b/includes/city.pug
@@ -30,8 +30,8 @@ block content
             div.icon.sinoptik
             a(href='https://sinoptik.ua/%D0%BF%D0%BE%D0%B3%D0%BE%D0%B4%D0%B0-%D0%BD%D0%BE%D0%B2%D0%BE%D0%BC%D0%B8%D1%80%D0%B3%D0%BE%D1%80%D0%BE%D0%B4', target='_blank') Погода_Sinoptik
           li
-            div.icon.rp5.ua
-            a(href='http://rp5.ua/%D0%9F%D0%BE%D0%B3%D0%BE%D0%B4%D0%B0_%D0%B2_%D0%9D%D0%BE%D0%B2%D0%BE%D0%BC%D0%B8%D1%80%D0%B3%D0%BE%D1%80%D0%BE%D0%B4%D0%B5', target='_blank') Погода_Rp5.ua
+            div.icon.weather.com
+            a(href='https://weather.com/uk-UA/weather/hourbyhour/l/UPXX0695:1:UP', target='_blank') Погода_Weather.com
           li
             div.icon.meteoprog
             a(href='https://www.meteoprog.ua/ru/review/Novomirgorod/', target='_blank') Погода_Meteoprog
