--- a/includes/index.pug
+++ b/includes/index.pug
@@ -1,7 +1,7 @@
 extends _layout.pug
   
 block title
-  title ZAKLADKI - Список популярных сайтов (топ/top ЗАКЛАДКИ)
+  title ЗАКЛАДКИ - Список популярних сайтів (ТОП ЗАКЛАДКИ)
 
 block menu
   - var current = 'Главная'
@@ -9,7 +9,7 @@ block menu
   include _nav.pug
   
 block meta
-  meta(name='keywords', content='best sait, лучшие сайты, популярные сайты, каталог сайтов, быстрые ссылки, cписок найпопулярніших веб-сайтів, топ сайтів, speeddial, новости, соцсети, видео, погода')
+  meta(name='keywords', content='best sait, лучшие сайты, популярные сайты, каталог сайтов, быстрые ссылки, cписок найпопулярніших веб-сайтів, zakladki, top, топ сайтів, speeddial, новости, соцсети, видео, погода')
   meta(name='description', content='Полный список самых популярных сайтов интернета. Удобный каталог сайтов с сортировкой по тематике. Все топ сайты в одном месте. Все для удобства в интернете.')
   
 block content
