--- a/includes/index.pug
+++ b/includes/index.pug
@@ -190,10 +190,8 @@ block content
               div.icontooinfo.a0youtubeinform(title='Відеоінструкція. Процес реєстрації та огляд особистого кабінету на офіційному сайті компанії ТОВ Кіровоградська обласна ЕК', alt='')
           li
             div.icon.a0pencil-1(title='Текстовая информация', alt='')
-            a(href='https://koek.billing.city/login', target='_blank') Кабінет електро 2020
-            div.icontooinfo.a0repa3(title='Огляд листівки від КОЕК', alt='')
-            a(href='https://youtu.be/qIJYbNR_l6g', target='_blank')
-              div.icontooinfo.a0youtubeinform(title='Відеоінструкція. Процес реєстрації та огляд особистого кабінету на офіційному сайті компанії ТОВ Кіровоградська обласна ЕК', alt='')
+            a(href='https://ok.kiroe.com.ua/home', target='_blank') Кабінет електро 2022
+            div.icontooinfo.a0repa3(title='Особистий кабінет побутового споживача ПрАТ Кіровоградобленерго', alt='')
           li
             div.icon.ukrtelecom.ua
             a(href='https://ukrtelecom.ua/', target='_blank') ukrtelecom
