--- a/includes/communal.pug
+++ b/includes/communal.pug
@@ -63,6 +63,10 @@ block content
               div.icontooinfo.a0youtubeinform(title='Відеоінструкція. Процес реєстрації та огляд особистого кабінету на офіційному сайті компанії ТОВ Кіровоградська обласна ЕК', alt='')
           li
             div.icon.a0pencil-1(title='Текстовая информация', alt='')
+            a(href='https://ok.kiroe.com.ua/home', target='_blank') Кабінет електро 2022
+            div.icontooinfo.a0repa3(title='Особистий кабінет побутового споживача ПрАТ Кіровоградобленерго', alt='')
+          li
+            div.icon.a0pencil-1(title='Текстовая информация', alt='')
             a(href='https://koek.billing.city/login', target='_blank') Кабінет електро 2020
             div.icontooinfo.a0repa3(title='Огляд листівки від КОЕК', alt='')
             a(href='https://youtu.be/qIJYbNR_l6g', target='_blank')
